--- a/eggShell/src/app/nav/nav.component.scss
+++ b/eggShell/src/app/nav/nav.component.scss
@@ -85,3 +85,46 @@
   height: 4px;
   background: none;
 }
+
+// .notice-container {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-evenly;
+//     align-items: center;
+//     padding: 0.5em;
+//     margin: 0.5em 1em;
+//     border: 1px solid #ccc;
+//     border-radius: 0.3em;
+//     box-shadow: 4px 4px 12px #ccc;
+
+//     img {
+//         width: 4em;
+//         border-radius: 50%;
+//         margin-right: 1em;
+//         box-shadow: 4px 4px 12px #ccc;
+//     }
+
+//     .content-container {
+//         p {
+//             // margin: 0 0 0.5em;
+//             font-size: small;
+//             font-weight: 400;
+//         }
+
+//         .button-container {
+//             display: flex;
+//             flex-direction: row;
+
+//             button {
+//                 display: flex;
+//                 justify-content: space-between;
+//                 font-size: small;
+//                 font-weight: 400;
+
+//                 &:last-child {
+//                     margin-left: 0.5em;
+//                 }
+//             }
+//         }
+//     }
+// }
