--- a/eggShell/src/app/nav/settings/settings.component.html
+++ b/eggShell/src/app/nav/settings/settings.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group mat-align-tabs="center">
-    <mat-tab label="Udvarok">
+    <mat-tab label="Udvar">
         <app-barton [editAllowed]="true"></app-barton>
     </mat-tab>
     <!-- <mat-tab label="Second">Content 2</mat-tab> -->
-    <!-- <mat-tab label="Third">Content 3</mat-tab> -->
+    <mat-tab label="Jogosultság">Content 3</mat-tab>
 </mat-tab-group>
