add request-http service add request and invite endpoints to backend add subSchemas to backend models add invitation and request models to backend

--- a/eggShell/src/app/barton/barton.component.html
+++ b/eggShell/src/app/barton/barton.component.html
@@ -93,7 +93,7 @@
     </div>
 
     <div *ngIf="editAllowed" class="poultry-container">
-        <mat-expansion-panel [hideToggle]="false">
+        <mat-expansion-panel [hideToggle]="false" [expanded]="expansionOpened">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     <h2>Baromfi fajták</h2>
