--- a/eggShell/src/app/barton/barton.component.scss
+++ b/eggShell/src/app/barton/barton.component.scss
@@ -70,13 +70,28 @@ div {
 
     .poultry-container {
         box-sizing: border-box;
+        position: sticky;
+        position: -webkit-sticky;
         display: flex;
-        flex-direction: column;
-        width: 100%;
-        // min-height: 10em;
+        // flex-direction: column;
+        flex-wrap: nowrap;
+        // width: fit-content;
+        max-height: 14em;
         margin: 2em auto 0;
         text-align: center;
         box-shadow: 4px 4px 12px #ccc;
+        overflow-x: scroll;
+
+        mat-expansion-panel-header {
+            max-height: 3em;
+        }
+
+        // .mat-expansion-panel-body {
+        //     min-width: fit-content;
+        //     overflow-x: scroll;
+        //     padding: 0;
+        //     background: pink;
+        // }
 
         h2 {
             font-weight: 300;
@@ -85,9 +100,15 @@ div {
         }
     }
 
-    // #source-list {
-    //     flex-wrap: nowrap;
-    // }
+    #source-list {
+        // box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        overflow: scroll;
+        // min-width: fit-content;
+        max-height: 10em;
+    }
 
     .poultry-list {
         box-sizing: border-box;
@@ -96,12 +117,12 @@ div {
         flex-wrap: wrap;
         align-items: center;
         justify-content: center;
-        margin: 1em auto;
+        // margin: 1em auto;
         // box-shadow: 4px 4px 12px #ccc;
         min-height: 10em;
         background: white;
         border-radius: 4px;
-        overflow: scroll;
+        // overflow: scroll;
 
         .items {
             box-sizing: border-box;
@@ -125,6 +146,8 @@ div {
             background-repeat: no-repeat;
             font-size: 14px;
             //   text-align: center;
+            // overflow: scroll;
+
             img {
                 margin-top: 0.5em;
                 width: 4.5em;
