--- a/eggShell/src/app/getting-started/getting-started.component.html
+++ b/eggShell/src/app/getting-started/getting-started.component.html
@@ -5,20 +5,6 @@
         <ng-template matStepLabel>
             <p class="label">Regisztrálj vagy jelentkezz be!</p>
         </ng-template>
-        <!-- <div class="auth">
-            <div>
-                <button mat-fab (click)="openLoginDialog()">
-                    <mat-icon>login</mat-icon>
-                </button>
-                <p>bejelentkezés</p>
-            </div>
-            <div>
-                <button mat-fab (click)="openRegDialog()">
-                    <mat-icon>person_add</mat-icon>
-                </button>
-                <p>regisztráció</p>
-            </div>
-        </div> -->
     </mat-step>
 
     <mat-step state="barton">
@@ -33,7 +19,7 @@
         </ng-template>
         <mat-tab-group class="tab-group" mat-align-tabs="center" [selectedIndex]="tabIndex">
             <mat-tab class="tab-content" label="létrehozok">
-                <app-barton [editAllowed]="true"></app-barton>
+                <app-barton [editAllowed]="true" [expansionOpened]="true"></app-barton>
                 <button mat-raised-button color="accent" matStepperNext (click)="saveBarton()">
                     Kész!
                 </button>
