--- a/eggShell/src/app/nav/nav.component.html
+++ b/eggShell/src/app/nav/nav.component.html
@@ -1,13 +1,13 @@
 <mat-toolbar color="primary">
 
-  <span *ngIf="!(isHandset$ | async)">
-    <button type="button" [ngStyle]="{'padding-right': '1em'}" aria-label="Toggle sidenav" mat-icon-button
+  <span >
+    <button *ngIf="!(isHandset$ | async)" type="button" [ngStyle]="{'padding-right': '1em'}" aria-label="Toggle sidenav" mat-icon-button
       (click)="navMenu.toggle()">
       <mat-icon aria-label="Side nav toggle icon">
         menu
       </mat-icon>
     </button>
-    <span *ngIf="!(isHandset$ | async) || !isLoggedIn" routerLink="/main" routerLinkActive="active">
+    <span *ngIf="!isLoggedIn" routerLink="/main" routerLinkActive="active">
       <img [src]="URL + 'images/favicon.ico'" alt="favicon">
       eggshell
     </span>
@@ -31,14 +31,15 @@
       person_add
     </mat-icon>
     <mat-icon *ngIf="isLoggedIn" (click)="notificationDrawer.toggle()" matTooltip="Értesítések"
-      matTooltipPosition="below" matTooltipShowDelay=250 matTooltipHideDelay=500 [matBadge]="(notificationCounter$ | async)"
-      [matBadgeHidden]="!(!!(notificationCounter$ | async))" matBadgeColor="warn" matBadgeSize="medium"
-      matBadgeOverlap="true" [ngStyle]="(!!(notificationCounter$ | async)) ? {'margin-right': '0.5em'} : {}">
+      matTooltipPosition="below" matTooltipShowDelay=250 matTooltipHideDelay=500
+      [matBadge]="(notificationCounter$ | async)" [matBadgeHidden]="!(!!(notificationCounter$ | async))"
+      matBadgeColor="warn" matBadgeSize="medium" matBadgeOverlap="true"
+      [ngStyle]="(!!(notificationCounter$ | async)) ? {'margin-right': '0.5em'} : {}">
       {{!!(notificationCounter$ | async) ? 'notifications_active' : 'notifications'}}
     </mat-icon>
     <button *ngIf="(isHandset$ | async)" type="button" aria-label="Toggle sidenav" mat-icon-button
       (click)="navMenu.toggle()">
-      <mat-icon aria-label="Side nav toggle icon" >
+      <mat-icon aria-label="Side nav toggle icon">
         menu
       </mat-icon>
     </button>
@@ -56,38 +57,39 @@
     <!-- Menü -->
 
     <mat-nav-list>
-      <a *ngIf="isLoggedIn" mat-list-item routerLink="/main" routerLinkActive="active" (click)="menuClick()">
+      <a *ngIf="isLoggedIn" mat-list-item [routerLink]="(hasBarton) ? '/main' : '/getting-started'"
+        routerLinkActive="active" (click)="menuClick(navMenu)">
         <mat-icon>home</mat-icon>
         <span>Főoldal</span>
       </a>
       <a *ngIf="isLoggedIn" [disabled]="!hasBarton" mat-list-item routerLink="/add-egg" routerLinkActive="active"
-        (click)="navMenu.toggle()">
+        (click)="menuClick(navMenu)">
         <mat-icon>egg</mat-icon>
         <span>Tojás</span>
       </a>
       <a *ngIf="isLoggedIn" [disabled]="!hasBarton" mat-list-item routerLink="/add-egg" routerLinkActive="active"
-        (click)="navMenu.toggle()">
+        (click)="menuClick(navMenu)">
         <mat-icon>restaurant_menu</mat-icon>
         <span>Táp</span>
       </a>
       <a *ngIf="isLoggedIn" [disabled]="!hasBarton" mat-list-item routerLink="/add-egg" routerLinkActive="active"
-        (click)="navMenu.toggle()">
+        (click)="menuClick(navMenu)">
         <mat-icon>trending_up</mat-icon>
         <span>Statisztikák</span>
       </a>
-      <a *ngIf="isLoggedIn" mat-list-item routerLink="/settings" routerLinkActive="active" (click)="navMenu.toggle()">
+      <a *ngIf="isLoggedIn" mat-list-item routerLink="/settings" routerLinkActive="active" (click)="menuClick(navMenu)">
         <mat-icon>settings</mat-icon>
         <span>Beállítások</span>
       </a>
-      <a *ngIf="!isLoggedIn" mat-list-item (click)="navMenu.toggle()" (click)="openLoginDialog()">
+      <a *ngIf="!isLoggedIn" mat-list-item (click)="menuClick(navMenu)" (click)="openLoginDialog()">
         <mat-icon>login</mat-icon>
         <span>Belépés</span>
       </a>
-      <a *ngIf="!isLoggedIn" mat-list-item (click)="navMenu.toggle()" (click)="openRegDialog()">
+      <a *ngIf="!isLoggedIn" mat-list-item (click)="menuClick(navMenu)" (click)="openRegDialog()">
         <mat-icon>person_add</mat-icon>
         <span>Regisztráció</span>
       </a>
-      <a *ngIf="isLoggedIn" mat-list-item (click)="navMenu.toggle()" (click)="logout()">
+      <a *ngIf="isLoggedIn" mat-list-item (click)="menuClick(navMenu)" (click)="logout()">
         <mat-icon>logout</mat-icon>
         <span>Kilépés</span>
       </a>
@@ -117,7 +119,7 @@
       </div> -->
       <app-notification [notice]="notice" [index]="i"></app-notification>
     </div>
-    
+
   </mat-sidenav>
 
 </mat-sidenav-container>
