--- a/eggShell/src/app/nav/notification/notification.component.scss
+++ b/eggShell/src/app/nav/notification/notification.component.scss
@@ -39,4 +39,11 @@
             }
         }
     }
+
+    small {
+        // padding-top: 4em;
+        font-size: xx-small;
+        font-weight: 200;
+        opacity: 50%;
+    }
 }
