--- a/eggShell/src/app/nav/notification/notification.component.scss
+++ b/eggShell/src/app/nav/notification/notification.component.scss
@@ -1,49 +1,106 @@
 .notice-container {
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
     padding: 0.5em;
     margin: 0.5em 1em;
     // border: 1px solid #ccc;
     border-radius: 0.3em;
     box-shadow: 4px 4px 12px #ccc;
 
-    img {
-        width: 4em;
-        border-radius: 50%;
-        margin-right: 1em;
-        box-shadow: 4px 4px 12px #ccc;
-    }
+    .notice-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
 
-    .content-container {
-        p {
-            // margin: 0 0 0.5em;
-            font-size: small;
-            font-weight: 400;
+        img {
+            width: 4em;
+            border-radius: 50%;
+            margin-right: 1em;
+            box-shadow: 4px 4px 12px #ccc;
         }
 
-        .button-container {
-            display: flex;
-            flex-direction: row;
-
-            button {
-                display: flex;
-                justify-content: space-between;
+        .content-container {
+            p {
+                // margin: 0 0 0.5em;
                 font-size: small;
                 font-weight: 400;
+            }
+        }
 
-                &:last-child {
-                    margin-left: 0.5em;
-                }
+        small {
+            // padding-top: 4em;
+            font-size: xx-small;
+            font-weight: 200;
+            opacity: 50%;
+        }
+
+        .notice-expand {
+            display: flex;
+            flex-direction: column;
+            padding: 0.5em;
+            margin: 1em 0;
+
+            .expand-header {
+            }
+
+            .expand-body {
             }
         }
     }
+}
 
-    small {
-        // padding-top: 4em;
-        font-size: xx-small;
-        font-weight: 200;
-        opacity: 50%;
+.button-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+
+    button {
+        font-size: small;
+        font-weight: 400;
+
+        &:last-child {
+            margin-left: 1em;
+        }
+    }
+}
+
+.table {
+    width: 100%;
+    padding: 1em 0;
+
+    .table-header-row {
+        width: 100%;
+
+        td {
+            text-align: start;
+            font-size: small;
+            font-weight: 200;
+            color: #777;
+
+            &:last-child {
+                width: 100%;
+                text-align: center;
+            } 
+        }
+
+    }
+
+    .table-body {
+        td {
+            text-align: start;
+            font-size: small;
+            font-weight: 200;
+
+            &:nth-child(2) {
+                text-align: end;
+            }
+            
+            &:last-child {
+                text-align: end;
+                // max-width: 3em;
+            } 
+        }
+
     }
 }
